2008-01-16  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs: The rule shouldn't be applied to enums.

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLongParameterListsTest.cs: Don't report defects for p/invokes

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLongMethodsRule.cs: Use new Location ctor.
	* AvoidLongParameterListsRule.cs: Use new Location ctor. Change 
	two methods to static.
	* AvoidSpeculativeGeneralityRule.cs: Use new Location ctor. Change
	four methods to static.
	* CodeDuplicatedLocator.cs: Use new Location ctor. Change two 
	methods to static.
	* Expression.cs: Change a method to static.
	* ExpressionFillerVisitor.cs: Change two methods to static.

2008-01-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLargeClassesRule.cs: Don't report defect if the fields are 
	const or readonly or if they were generated (e.g. auto-implemented 
	properties in C# 3).
	* AvoidLongMethodsRule.cs: Move InitWellKnownAutogeneratedNames code
	inside static ctor so we don't initialize the dictionary each time
	the rule is called.
	* Gendarme.Rules.Smells.mdp, Test/Test.Rules.Smells.mdp: MonoDevelop
	removed the "./" prefix before each file.
	* Makefile.am: Compile unit tests with -langversion:linq parameter.

2008-01-05  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Compile with -langversion:linq parameter.
	* AvoidLargeClassesRule.cs, AvoidSpeculativeGeneralityRule.cs: Remove
	ugly IsCompilerGenerated helper method.  Use rocks instead.

2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* ExpressionFillerVisitor.cs: Add the ceq code to the acceptable
	instructions set.  With this change, all the bugs in code compiled under
	csc without optimization flag are fixed.

2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* ExpressionFillerVisitor.cs: Avoid creating empty expressions, because
	the equals method in the Expression class checks for the same size, and