@@ -59,7 +59,7 @@ namespace Gendarme.Rules.Smells {
 			}
 		}
 
-		private static bool IsAutogenerated (MethodDefinition method)
+		private static bool IsAutogeneratedByTools (MethodDefinition method)
 		{
 			if (method.Parameters.Count != 0)
 				return false;
@@ -72,6 +72,11 @@ namespace Gendarme.Rules.Smells {
 			return false;
 		}
 
+		private static bool IsStaticConstructor (MethodDefinition method)
+		{
+			return method.Name == MethodDefinition.Cctor;
+		}
+
 		public MessageCollection CheckMethod (MethodDefinition method, Runner runner)
 		{
 			// rule does not apply if method as no code (e.g. abstract, p/invoke)
@@ -82,14 +87,20 @@ namespace Gendarme.Rules.Smells {
 			if (method.IsGeneratedCode ())
 				return runner.RuleSuccess;
 
+			// rule does not apply to autogenerated code from some
+			// tools
+			if (IsAutogeneratedByTools (method))
+				return runner.RuleSuccess;
+			
+			// Extracting static methods from static constructors really
+			// makes sense? 	
+			if (IsStaticConstructor (method))
+				return runner.RuleSuccess;
+
 			// rule applies!
 
 			// success if the instruction count is below the defined threshold
 			if (method.Body.Instructions.Count <= MaxInstructions)
-				return runner.RuleSuccess;
-
-			// success if the code is from some well known *large* methods
-			if (IsAutogenerated (method))
 				return runner.RuleSuccess;
 
 			Location location = new Location (method);
